# easy-exchange-rates

./: LICENSE  README.md  __init__.py  setup.cfg  setup.py
.github/workflows/: build.yml  python-app.yml
easy_exchange_rates/: eer.py
src/easy_exchange_rates/: __init__.py  eer.py
tests/: test.py
