[metadata]
name = easy_exchange_rates
version = 0.2.0
author = Odd Gunnar Aspaas
author_email = odd.gunnar.aspaas@gmail.com
description = Easy way to get currency exchange data from https://data.ecb.europa.eu/ to a pandas dataframe.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oddaspa/easy-exchange-rates
project_urls =
    Bug Tracker = https://github.com/oddaspa/easy-exchange-rates/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src